--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <style>
       body {
         background-color: black;
+        color: white;
       }
       .container {
         width: 50%;
         margin: 0 auto;
         padding: 20px;
-        background-color: white;
-        color: black;
-        text-align: center;
+        background-color: black;
       }
     </style>
   </head>
