--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
       body {
         background-color: black;
-        color: white;
+        color: rgb(0, 0, 0);
       }
       .container {
         width: 50%;
