changing some stuff

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
   <body>
     <div class="container">
       <h1>Welcome to My Documentation Page</h1>
-      <p>Basically, This is just a test for now,
-        i'm not adding anything that may interest anyone here for now
-         but this will be the place where i add my important docs for apis and services in the feature</p>
+      <p>Basically, This is just a test for now</p>
     </div>
   </body>
 </html>
