--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <div class="container">
       <h1>Welcome to My Documentation Page</h1>
       <p>Basically, This is just a test for now</p>
+      <p>But in the soon feature you will find the docs for any apis or services i may provide for free on my github</p>
+      <p>So.. Stay Tuned!</p>
     </div>
   </body>
 </html>
