--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
-<!DOCTYPE html>
+\<!DOCTYPE html>
 <html>
   <head>
     <title>My Documentation Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       body {
         background-color: black;
-        color: rgb(255, 255, 255);
+        color: white;
       }
       .container {
-        width: 50%;
+        width: 80%;
         margin: 0 auto;
         padding: 20px;
         background-color: black;
+      }
+      @media only screen and (max-width: 768px) {
+        .container {
+          width: 90%;
+        }
+      }
+      @media only screen and (max-width: 480px) {
+        .container {
+          width: 100%;
+        }
       }
     </style>
   </head>
