--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
         padding: 20px;
         background-color: black;
       }
+      .websites {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+      }
+      .websites a {
+        color: white;
+        margin: 5px 0;
+        text-decoration: none;
+      }
       @media only screen and (max-width: 768px) {
         .container {
           width: 90%;
@@ -30,8 +41,18 @@
     <div class="container">
       <h1>Welcome to My Documentation Page</h1>
       <p>Basically, This is just a test for now</p>
-      <p>But in the soon feature you will find the docs for any apis or services i may provide for free on my github</p>
+      <p>But in the soon future, you will find the docs for any APIs or services I may provide for free on my GitHub.</p>
       <p>So.. Stay Tuned!</p>
+
+      <h2>Check out my other websites!</h2>
+      <div class="websites">
+        <a href="http://mr-abdulkarim.com" target="_blank">mr-abdulkarim.com</a>
+        <a href="http://api.mr-abdulkarim.com" target="_blank">api.mr-abdulkarim.com</a>
+        <a href="http://liff.mr-abdulkarim.com" target="_blank">liff.mr-abdulkarim.com</a>
+      </div>
+
+      <h2>Contact me on LINE if you are interested in anything or need any kind of help</h2>
+      <a href="https://line.me/ti/p/~mr.abdulkarim" target="_blank">My LINE Account</a>
     </div>
   </body>
 </html>
