--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       body {
         background-color: black;
         color: white;
+        font-family: Arial, sans-serif;
       }
       .container {
         width: 80%;
@@ -14,14 +15,11 @@
         padding: 20px;
         background-color: black;
       }
-      .websites {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+      .websites, .line-contact {
         margin-top: 20px;
       }
-      .websites a {
-        color: white;
+      .websites a, .line-contact a {
+        color: red;
         margin: 5px 0;
         text-decoration: none;
       }
@@ -46,13 +44,15 @@
 
       <h2>Check out my other websites!</h2>
       <div class="websites">
-        <a href="http://mr-abdulkarim.com" target="_blank">mr-abdulkarim.com</a>
-        <a href="http://api.mr-abdulkarim.com" target="_blank">api.mr-abdulkarim.com</a>
+        <a href="http://mr-abdulkarim.com" target="_blank">mr-abdulkarim.com</a><br>
+        <a href="http://api.mr-abdulkarim.com" target="_blank">api.mr-abdulkarim.com</a><br>
         <a href="http://liff.mr-abdulkarim.com" target="_blank">liff.mr-abdulkarim.com</a>
       </div>
 
       <h2>Contact me on LINE if you are interested in anything or need any kind of help</h2>
-      <a href="https://line.me/ti/p/~mr.abdulkarim" target="_blank">My LINE Account</a>
+      <div class="line-contact">
+        <a href="https://line.me/ti/p/~mr.abdulkarim" target="_blank">My LINE Account</a>
+      </div>
     </div>
   </body>
 </html>
