--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Documentation Page</title>
+  <title>Documentation Page</title>
   <style>
     body {
       background-color: #1a1a1a;
@@ -28,6 +28,16 @@
     a {
       color: #ff3333;
       text-decoration: none;
+      display: inline-block;
+      padding: 8px 16px;
+      margin: 5px;
+      border: 1px solid #ff3333;
+      border-radius: 4px;
+      transition: background-color 0.3s;
+    }
+
+    a:hover {
+      background-color: #ff3333;
     }
 
     @media only screen and (max-width: 768px) {
@@ -46,19 +56,14 @@
 <body>
   <div class="container">
     <h1>Welcome to My Documentation Page</h1>
-    <p>Currently in testing, but soon you'll find documentation for APIs and services on my GitHub.</p>
+    <p>Currently in testing stage, but soon you'll find documentation for APIs and services on my GitHub.</p>
     <p>Stay tuned for updates!</p>
 
-    <h2>Explore My Websites:</h2>
-    <div class="websites">
-      <a href="#" target="_blank">Your Website 1</a><br>
-      <a href="#" target="_blank">Your Website 2</a><br>
-      <a href="#" target="_blank">Your Website 3</a>
-    </div>
-
-    <h2>Contact Me on LINE for Inquiries or Assistance:</h2>
-    <div class="line-contact">
-      <a href="#" target="_blank">My LINE Account</a>
+    <h2>Contact Me:</h2>
+    <div class="contacts">
+      <a href="https://line.me/ti/p/~mr.abdulkarim" target="_blank">LINE Account</a>
+      <a href="https://wa.me/16892674330" target="_blank">WhatsApp: +1 (689) 267-4330</a>
+      <a href="https://t.me/byterz" target="_blank">Telegram: @byterz</a>
     </div>
   </div>
 </body>
