--- a/index.html
+++ b/index.html
@@ -3,68 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Documentation Page</title>
-  <style>
-    body {
-      background-color: #1a1a1a;
-      color: #ffffff;
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
+  <title>GET?POST?PING? Tester Page</title>
+  <script>
+    function logIP() {
+      var xhr = new XMLHttpRequest();
+      xhr.open("GET", "https://api64.ipify.org?format=json", true);
+      xhr.onreadystatechange = function () {
+        if (xhr.readyState == 4 && xhr.status == 200) {
+          var response = JSON.parse(xhr.responseText);
+          var ip = response.ip;
+          document.getElementById("ipLog").innerHTML += "<p>" + ip + "</p>";
+        }
+      };
+      xhr.send();
     }
-
-    .container {
-      width: 80%;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #1a1a1a;
-      text-align: center;
-    }
-
-    h1, h2, p {
-      margin: 10px 0;
-    }
-
-    a {
-      color: #ff3333;
-      text-decoration: none;
-      display: inline-block;
-      padding: 8px 16px;
-      margin: 5px;
-      border: 1px solid #ff3333;
-      border-radius: 4px;
-      transition: background-color 0.3s;
-    }
-
-    a:hover {
-      background-color: #ff3333;
-    }
-
-    @media only screen and (max-width: 768px) {
-      .container {
-        width: 90%;
-      }
-    }
-
-    @media only screen and (max-width: 480px) {
-      .container {
-        width: 100%;
-      }
-    }
-  </style>
+  </script>
 </head>
 <body>
-  <div class="container">
-    <h1>Welcome to My Documentation Page</h1>
-    <p>Currently in testing stage, but soon you'll find documentation for APIs and services on my GitHub.</p>
+  <div>
+    <h1>Welcome to My Tester Page</h1>
+    <p>Currently in testing stage for GET, POST, PING requests.</p>
     <p>Stay tuned for updates!</p>
 
     <h2>Contact Me:</h2>
-    <div class="contacts">
+    <div>
       <a href="https://line.me/ti/p/~mr.abdulkarim" target="_blank">LINE Account</a>
       <a href="https://wa.me/16892674330" target="_blank">WhatsApp: +1 (689) 267-4330</a>
       <a href="https://t.me/byterz" target="_blank">Telegram: @byterz</a>
     </div>
+
+    <h2>Real-time Monitor:</h2>
+    <div id="ipLog"></div>
+    <button onclick="logIP()">Log IP</button>
   </div>
 </body>
 </html>
