--- a/index.html
+++ b/index.html
@@ -1,40 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GET?POST?PING? Tester Page</title>
-  <script>
-    function logIP() {
-      var xhr = new XMLHttpRequest();
-      xhr.open("GET", "https://api64.ipify.org?format=json", true);
-      xhr.onreadystatechange = function () {
-        if (xhr.readyState == 4 && xhr.status == 200) {
-          var response = JSON.parse(xhr.responseText);
-          var ip = response.ip;
-          document.getElementById("ipLog").innerHTML += "<p>" + ip + "</p>";
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coming Soon - Mr. Karim's Docs</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f8f8;
+            color: #333;
         }
-      };
-      xhr.send();
-    }
-  </script>
+
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            text-align: center;
+        }
+
+        h1 {
+            color: #555;
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+            color: #777;
+        }
+
+        .popup {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        .popup-content {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .close-btn {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #333;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-  <div>
-    <h1>Welcome to My Tester Page</h1>
-    <p>Currently in testing stage for GET, POST, PING requests.</p>
-    <p>Stay tuned for updates!</p>
 
-    <h2>Contact Me:</h2>
-    <div>
-      <a href="https://line.me/ti/p/~mr.abdulkarim" target="_blank">LINE Account</a>
-      <a href="https://wa.me/16892674330" target="_blank">WhatsApp: +1 (689) 267-4330</a>
-      <a href="https://t.me/byterz" target="_blank">Telegram: @byterz</a>
+<div class="container">
+    <h1>Coming Soon - Mr. Karim's Docs</h1>
+    <p>We are working hard to bring you valuable content. Stay tuned for updates!</p>
+    <a href="#" onclick="showPopup();">Learn more</a>
+</div>
+
+<div id="popup" class="popup">
+    <div class="popup-content">
+        <h2>Exploring the World of Documentation</h2>
+        <p>This will be the home for comprehensive documentation on programming, cybersecurity, and more.</p>
+        <a href="#" class="close-btn" onclick="hidePopup();">Close</a>
     </div>
+</div>
 
-    <h2>Real-time Monitor:</h2>
-    <div id="ipLog"></div>
-    <button onclick="logIP()">Log IP</button>
-  </div>
+<script>
+    function showPopup() {
+        document.getElementById('popup').style.display = 'flex';
+    }
+
+    function hidePopup() {
+        document.getElementById('popup').style.display = 'none';
+    }
+</script>
+
 </body>
 </html>
