--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f8f8;
-            color: #333;
+            background-color: #1a1a1a; /* Dark background color */
+            color: #ddd; /* Light text color */
         }
 
         .container {
@@ -21,13 +21,22 @@
         }
 
         h1 {
-            color: #555;
+            color: #eee; /* Light heading color */
         }
 
         p {
             font-size: 18px;
             line-height: 1.6;
-            color: #777;
+            color: #ccc; /* Medium text color */
+        }
+
+        a {
+            color: #4CAF50; /* Green link color */
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
         }
 
         .popup {
@@ -37,27 +46,31 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(0, 0, 0, 0.7); /* Semi-transparent black overlay */
             justify-content: center;
             align-items: center;
             text-align: center;
         }
 
         .popup-content {
-            background-color: #fff;
+            background-color: #2c2c2c; /* Dark popup background */
             padding: 20px;
             border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.3); /* Light box shadow */
         }
 
         .close-btn {
             margin-top: 20px;
             padding: 10px 20px;
-            background-color: #333;
-            color: #fff;
+            background-color: #4CAF50; /* Green button color */
+            color: #fff; /* White button text color */
             text-decoration: none;
             border-radius: 5px;
             cursor: pointer;
+        }
+
+        .close-btn:hover {
+            background-color: #45a049; /* Darker green on hover */
         }
     </style>
 </head>
